cleaned up helper, major changes on AbstractWebtreamHandler

--- a/src/Helper/CMakeLists.txt
+++ b/src/Helper/CMakeLists.txt
@@ -23,8 +23,10 @@ SET(HEADERS
 )
 
 SET(SOURCES
-	FileHelper.cpp
+
 	Helper.cpp
+	FileHelper.cpp
+	UrlHelper.cpp
 
     DirectoryReader/DirectoryReader.cpp
     Logger/Logger.cpp
