Splitted some classes, create documentations

--- a/src/GUI/Helper/GlobalMessage/CMakeLists.txt
+++ b/src/GUI/Helper/GlobalMessage/CMakeLists.txt
@@ -2,7 +2,10 @@ PROJECT(say_gui_global_message)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(SOURCES
+        Message.cpp
 	GlobalMessage.cpp
+        GlobalMessageReceiverInterface.cpp
+
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
