--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,7 @@ override_dh_auto_build:
 override_dh_auto_install:
 	cd build && make install DESTDIR=../debian/sayonara
 
-override_dh_clean:
+override_dh_auto_clean:
 	rm -rf build
 
 %:
