--- a/src/Components/StreamPlugins/LastFM/CMakeLists.txt
+++ b/src/Components/StreamPlugins/LastFM/CMakeLists.txt
@@ -2,8 +2,12 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(say_comp_streamplugins_lastfm)
 
 SET(SOURCES
+
+	ArtistMatch.cpp
     LastFM.cpp
+
     LFMLoginThread.cpp
+	LFMSimArtistsParser.cpp
     LFMTrackChangedThread.cpp
     LFMWebAccess.cpp
 )
