Create library-playlist interaction, added more translation work to the PreferenceDialogInterface

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_SUBDIRECTORY(InfoDialog)
 ADD_SUBDIRECTORY(LanguageChooser)
 ADD_SUBDIRECTORY(LastFM)
 ADD_SUBDIRECTORY(Library)
+ADD_SUBDIRECTORY(LibraryPreferences)
 
 IF(${MTP_FOUND})
     ADD_SUBDIRECTORY(MTP)
@@ -24,3 +25,4 @@ ADD_SUBDIRECTORY(RemoteControl)
 ADD_SUBDIRECTORY(StartupDialog)
 ADD_SUBDIRECTORY(StreamRecorder)
 ADD_SUBDIRECTORY(TagEdit)
+
