Shortcuts configuration added

--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(APPLICATION_LIBRARIES
     say_gui_fontconfig
     say_gui_remote_control
     say_gui_library_preferences
+	say_gui_shortcuts
 
     say_interfaces_libraryinterface
     say_comp_remote_control
