--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -22,6 +22,7 @@ ADD_SUBDIRECTORY(Playlist)
 ADD_SUBDIRECTORY(Resources)
 ADD_SUBDIRECTORY(ShutdownDialog)
 ADD_SUBDIRECTORY(RemoteControl)
+ADD_SUBDIRECTORY(Shortcuts)
 ADD_SUBDIRECTORY(StartupDialog)
 ADD_SUBDIRECTORY(StreamRecorder)
 ADD_SUBDIRECTORY(TagEdit)
