--- a/src/GUI/Player/CMakeLists.txt
+++ b/src/GUI/Player/CMakeLists.txt
@@ -26,6 +26,7 @@ QT5_WRAP_UI(FORMS_UIC
 
 SET(PLAYER_LIBRARIES
 	say_gui_playlist
+	say_gui_helper_shortcuts
 	say_interfaces_player_plugin
 	say_interfaces_notifications
 	say_interfaces_preference_dialog
