--- a/src/Interfaces/PlayerPlugin/CMakeLists.txt
+++ b/src/Interfaces/PlayerPlugin/CMakeLists.txt
@@ -11,4 +11,5 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_helper
 	say_gui_helper
+	say_gui_helper_shortcuts
 )
