--- a/src/GUI/Playlist/CMakeLists.txt
+++ b/src/GUI/Playlist/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(LINK_LIBS
 	say_gui_shutdown_dialog
 	say_gui_searchable_widget
 	say_gui_context_menu
+	say_gui_helper_shortcuts
 	say_helper_directory_reader
 )
 
