library immporter refactoring

--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -33,7 +33,8 @@ SET(APPLICATION_LIBRARIES
     say_gui_fontconfig
     say_gui_remote_control
     say_gui_library_preferences
-	say_gui_shortcuts
+    say_gui_shortcuts
+    say_gui_preferences
 
     say_interfaces_libraryinterface
     say_comp_remote_control
