--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -19,6 +19,7 @@ ADD_SUBDIRECTORY(Notifications)
 ADD_SUBDIRECTORY(Player)
 ADD_SUBDIRECTORY(PlayerPlugins)
 ADD_SUBDIRECTORY(Playlist)
+ADD_SUBDIRECTORY(PreferenceDialog)
 ADD_SUBDIRECTORY(Resources)
 ADD_SUBDIRECTORY(ShutdownDialog)
 ADD_SUBDIRECTORY(RemoteControl)
