--- a/src/GUI/LastFM/CMakeLists.txt
+++ b/src/GUI/LastFM/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(SOURCES
 )
 
 QT5_WRAP_UI(FORMS_UIC
-	GUI_LastFM_Dialog.ui
+	GUI_LastFM.ui
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
