Musixmatch update, style and font dialog update

--- a/src/GUI/Helper/Shortcuts/CMakeLists.txt
+++ b/src/GUI/Helper/Shortcuts/CMakeLists.txt
@@ -15,6 +15,6 @@ SET(SOURCES
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-		Qt5::Gui
-		say_helper
+		say_gui_helper
+
 )
