--- a/src/Helper/CMakeLists.txt
+++ b/src/Helper/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_SUBDIRECTORY(Parser)
 ADD_SUBDIRECTORY(Settings)
 ADD_SUBDIRECTORY(Tagging)
 ADD_SUBDIRECTORY(Playlist)
+ADD_SUBDIRECTORY(Compressor)
 ADD_SUBDIRECTORY(DirectoryReader)
 
 IF(NOT ${WIN32})
