--- a/src/Components/StreamPlugins/LastFM/CMakeLists.txt
+++ b/src/Components/StreamPlugins/LastFM/CMakeLists.txt
@@ -15,4 +15,5 @@ SET(SOURCES
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_helper
+	say_helper_compressor
 )
