--- a/src/GUI/TagEdit/CMakeLists.txt
+++ b/src/GUI/TagEdit/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 SET(SOURCES
 	GUI_TagEdit.cpp
 	TagLineEdit.cpp
+	TagTextInput.cpp
 )
 
 QT5_WRAP_UI(FORMS_UIC
