Show IP address

--- a/src/GUI/PreferenceDialog/CMakeLists.txt
+++ b/src/GUI/PreferenceDialog/CMakeLists.txt
@@ -13,4 +13,5 @@ QT5_WRAP_UI(UI_FILES
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${UI_FILES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_interfaces_preference_dialog
+	say_gui_combobox_delegate
 )
