--- a/src/Helper/DirectoryReader/CMakeLists.txt
+++ b/src/Helper/DirectoryReader/CMakeLists.txt
@@ -8,4 +8,5 @@ SET(SOURCES
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_helper_tagging
+	say_helper_parser
 )
