--- a/src/Helper/MetaDataInfo/CMakeLists.txt
+++ b/src/Helper/MetaDataInfo/CMakeLists.txt
@@ -12,4 +12,5 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_helper_settings
 	say_comp_covers
+	say_helper_compressor
 )
