--- a/src/GUI/Helper/CMakeLists.txt
+++ b/src/GUI/Helper/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(SOURCES
 
 	Delegates/ComboBoxDelegate.cpp
 	Delegates/TreeDelegate.cpp
+	Delegates/ListDelegate.cpp
 
 	IconLoader/IconLoader.cpp
 
