--- a/src/Components/StreamPlugins/Streams/CMakeLists.txt
+++ b/src/Components/StreamPlugins/Streams/CMakeLists.txt
@@ -16,4 +16,5 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_helper
 	say_helper_parser
+	say_comp_playlist
 )
