Added target link libraries for Windows builds.

--- a/src/Components/RemoteControl/CMakeLists.txt
+++ b/src/Components/RemoteControl/CMakeLists.txt
@@ -9,6 +9,7 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     Qt5::Core
     Qt5::Network
+    Qt5::Gui
     say_helper
     say_comp_playmanager
     say_comp_playlist
