--- a/src/Database/CMakeLists.txt
+++ b/src/Database/CMakeLists.txt
@@ -29,6 +29,7 @@ SET(SOURCES
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} )
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	Qt5::Sql
+	Qt5::Gui
 	say_helper_playlist
 )
 
