--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -31,7 +31,7 @@ SET(APPLICATION_LIBRARIES
     say_comp_remote_control
 )
 
-IF(NOT ${WIN32})
+IF(NOT WIN32 OR NOT DEFINED WIN32)
     SET(APPLICATION_LIBRARIES
 	${APPLICATION_LIBRARIES}
 	say_comp_dbus
