--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -15,7 +15,7 @@ ADD_SUBDIRECTORY(CoverLookup)
 ADD_SUBDIRECTORY(LyricLookup)
 ADD_SUBDIRECTORY(RemoteControl)
 
-IF( NOT ${WIN32} )
+IF( NOT WIN32 OR NOT DEFINED WIN32 )
     ADD_SUBDIRECTORY(DBus)
 ENDIF()
 
