--- a/src/Helper/CMakeLists.txt
+++ b/src/Helper/CMakeLists.txt
@@ -9,7 +9,7 @@ ADD_SUBDIRECTORY(Playlist)
 ADD_SUBDIRECTORY(Compressor)
 ADD_SUBDIRECTORY(DirectoryReader)
 
-IF(NOT ${WIN32})
+IF(NOT WIN32 OR NOT DEFINED WIN32)
     ADD_SUBDIRECTORY(Shutdown)
 ENDIF()
 
