--- a/src/3rdParty/SomaFM/CMakeLists.txt
+++ b/src/3rdParty/SomaFM/CMakeLists.txt
@@ -18,7 +18,7 @@ QT5_WRAP_UI(UI_FILES
 QT5_ADD_RESOURCES(RESOURCES
     ui/SomaFMIcons.qrc
 )
-IF( ${WIN32} )
+IF( WIN32 )
 	ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${UI_FILES} ${RESOURCES})
 ELSE()
 	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES} ${UI_FILES} ${RESOURCES})
@@ -32,6 +32,6 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_comp_covers
 )
 
-IF(NOT ${WIN32})
+IF(NOT WIN32 OR NOT DEFINED WIN32)
 	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX}/sayonara)
 ENDIF()
