--- a/src/3rdParty/Soundcloud/CMakeLists.txt
+++ b/src/3rdParty/Soundcloud/CMakeLists.txt
@@ -31,7 +31,7 @@ QT5_ADD_RESOURCES(RESOURCES_RCC ${RESOURCES})
 
 QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
 
-IF(${WIN32})
+IF(WIN32)
 	ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_HEADERS} ${RESOURCES_RCC})
 ELSE()
 	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES} ${FORMS_HEADERS} ${RESOURCES_RCC})
@@ -45,7 +45,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_interfaces_library_container
 )
 
-IF(NOT ${WIN32})
+IF(NOT WIN32 OR NOT DEFINED WIN32)
 	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX}/sayonara)
 ENDIF()
 
