biiiiig windows changes

--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -40,7 +40,7 @@ ELSE()
 	SET(APPLICATION_LIBRARIES
 		${APPLICATION_LIBRARIES}
 		sayonara_somafm
-#		sayonara_soundcloud
+		sayonara_soundcloud
 	)
 ENDIF()
 
