--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,11 @@ PROJECT(sayonara)
 INCLUDE(FindPkgConfig)
 INCLUDE(CheckCXXCompilerFlag)
 
+IF(WIN32)
+	PKG_CHECK_MODULES(GIO gio-windows-2.0 REQUIRED)
+ENDIF()
+
+
 PKG_CHECK_MODULES(TAGLIB REQUIRED taglib>=1.6)
 PKG_CHECK_MODULES(GLIB glib-2.0 REQUIRED)
 PKG_CHECK_MODULES(GOBJECT gobject-2.0 REQUIRED)
@@ -128,6 +133,10 @@ ENDIF()
 
 LINK_DIRECTORIES(${GSTREAMER_LIBRARY_DIRS})
 
+IF(WIN32)
+	LINK_DIRECTORIES(${GIO_LIBRARY_DIRS})
+ENDIF()
+
 
 ADD_SUBDIRECTORY(Application)
 ADD_SUBDIRECTORY(GUI)
@@ -148,6 +157,7 @@ IF(WIN32)
 	SET(OS_LIBRARIES
 	    api-ms-win-core-winrt-l1-1-0
 	    api-ms-win-core-winrt-string-l1-1-0
+		${GIO_LIBRARIES}
 	)
 ENDIF()
 
