--- a/src/GUI/Resources/CMakeLists.txt
+++ b/src/GUI/Resources/CMakeLists.txt
@@ -3,9 +3,22 @@ PROJECT(say_gui_resources)
 
 ADD_SUBDIRECTORY(Icons)
 
-QT5_ADD_RESOURCES(RESOURCES_RCC
-    Icons.qrc
+SET(RESOURCES
+	Icons.qrc
 )
+
+IF(WIN32)
+	SET(RESOURCES
+		${RESOURCES}
+		IconsWindows.qrc
+	)
+ENDIF()
+
+QT5_ADD_RESOURCES(RESOURCES_RCC
+	${RESOURCES}
+)
+
+
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${RESOURCES_RCC})
 
