--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -10,10 +10,15 @@ FILE(WRITE "${CMAKE_BINARY_DIR}/resources/sayonara" "?package(sayonara): \\
 )
 
 
-INSTALL(FILES "player.db" DESTINATION share/sayonara)
-INSTALL(FILES "sayonara.desktop" DESTINATION share/applications)
-INSTALL(FILES "${CMAKE_BINARY_DIR}/resources/sayonara" DESTINATION share/menu)
-INSTALL(FILES "sayonara.appdata.xml" DESTINATION share/appdata)
-INSTALL(FILES "manpage/sayonara.1.gz" DESTINATION share/man/man1)
-INSTALL(DIRECTORY "logos/" DESTINATION share/icons/hicolor)
+
+IF(WIN32)
+	INSTALL(FILES "player.db" DESTINATION share)
+ELSE()
+	INSTALL(FILES "player.db" DESTINATION share/sayonara)
+	INSTALL(FILES "sayonara.desktop" DESTINATION share/applications)
+	INSTALL(FILES "${CMAKE_BINARY_DIR}/resources/sayonara" DESTINATION share/menu)
+	INSTALL(FILES "sayonara.appdata.xml" DESTINATION share/appdata)
+	INSTALL(FILES "manpage/sayonara.1.gz" DESTINATION share/man/man1)
+	INSTALL(DIRECTORY "logos/" DESTINATION share/icons/hicolor)
+ENDIF()
 
