--- a/src/GUI/Resources/CMakeLists.txt
+++ b/src/GUI/Resources/CMakeLists.txt
@@ -22,8 +22,18 @@ QT5_ADD_RESOURCES(RESOURCES_RCC
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${RESOURCES_RCC})
 
-INSTALL(FILES "standard.css" DESTINATION share/sayonara)
-INSTALL(FILES "dark.css" DESTINATION share/sayonara)
 
+IF(WIN32)
+	SET(INSTALL_TARGET_PATH
+		"share"
+	)
+ELSE()
+	SET(INSTALL_TARGET_PATH
+		"share/sayonara"
+	)
+ENDIF()
+
+INSTALL(FILES "standard.css" DESTINATION ${INSTALL_TARGET_PATH})
+INSTALL(FILES "dark.css" DESTINATION ${INSTALL_TARGET_PATH})
 
 
