--- a/src/3rdParty/Soundcloud/CMakeLists.txt
+++ b/src/3rdParty/Soundcloud/CMakeLists.txt
@@ -33,8 +33,15 @@ QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
 
 IF(WIN32)
 	ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_HEADERS} ${RESOURCES_RCC})
+	SET(SOUNDCLOUD_INSTALL_PATH
+		"share"
+	)
 ELSE()
 	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES} ${FORMS_HEADERS} ${RESOURCES_RCC})
+	SET(SOUNDCLOUD_INSTALL_PATH
+		"share/sayonara"
+	)
+
 ENDIF()
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
@@ -49,5 +56,5 @@ IF(NOT WIN32 OR NOT DEFINED WIN32)
 	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX}/sayonara)
 ENDIF()
 
-INSTALL(FILES "soundcloud.db" DESTINATION share/sayonara)
+INSTALL(FILES "soundcloud.db" DESTINATION ${SOUNDCLOUD_INSTALL_PATH})
 
