--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,5 +169,11 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	${OS_LIBRARIES}
 )
 
-INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
-INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
+
+IF(WIN32)
+	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
+ELSE()
+	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
+ENDIF()
+
+
