--- a/src/Components/DBus/CMakeLists.txt
+++ b/src/Components/DBus/CMakeLists.txt
@@ -56,7 +56,7 @@ QT5_ADD_DBUS_INTERFACE(SOURCES
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-    say_helper
+	say_gui_helper
     say_interfaces_notifications
 )
 
