--- a/src/GUI/Playlist/CMakeLists.txt
+++ b/src/GUI/Playlist/CMakeLists.txt
@@ -19,6 +19,8 @@ SET(SOURCES
     TabWidget/PlaylistTabMenu.cpp
     TabWidget/PlaylistTabWidget.cpp
     View/PlaylistView.cpp
+    View/PlaylistViewEvents.cpp
+
 )
 
 QT5_WRAP_UI(FORMS_UIC
