--- a/src/GUI/PlayerPlugins/CMakeLists.txt
+++ b/src/GUI/PlayerPlugins/CMakeLists.txt
@@ -9,3 +9,17 @@ ADD_SUBDIRECTORY(Equalizer)
 ADD_SUBDIRECTORY(PlaylistChooser)
 ADD_SUBDIRECTORY(Speed)
 ADD_SUBDIRECTORY(Stream)
+
+SET(SOURCES
+    GUI_PlayerPlugin.cpp
+    PluginCloseButton.cpp
+)
+
+QT5_WRAP_UI(FORMS_UIC
+    GUI_PlayerPlugin.ui
+)
+
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}
+    say_interfaces_player_plugin
+)
