--- a/src/Helper/Parser/CMakeLists.txt
+++ b/src/Helper/Parser/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(SOURCES
 	PlaylistParser.cpp
 	PodcastParser.cpp
 	StreamParser.cpp
+
+	WWWPlaylistParser.cpp
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
