--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,6 +152,7 @@ SET(SOURCES
 )
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${QM_FILES})
+cotire(${PROJECT_NAME})
 
 IF(WIN32)
 	SET(OS_LIBRARIES
