loading bar update

--- a/src/GUI/Helper/CMakeLists.txt
+++ b/src/GUI/Helper/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(SOURCES
 	SayonaraWidget/SayonaraWidget.cpp
 	SayonaraWidget/SayonaraDialog.cpp
 	SayonaraWidget/SayonaraSlider.cpp
+	SayonaraWidget/SayonaraLoadingBar.cpp
 
 	SearchableWidget/SearchableListView.cpp
 	SearchableWidget/SearchableTableView.cpp
