--- a/src/GUI/PlayerPlugins/CMakeLists.txt
+++ b/src/GUI/PlayerPlugins/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_SUBDIRECTORY(Engine)
 ADD_SUBDIRECTORY(Equalizer)
 ADD_SUBDIRECTORY(PlaylistChooser)
 ADD_SUBDIRECTORY(Speed)
+ADD_SUBDIRECTORY(Crossfader)
 ADD_SUBDIRECTORY(Stream)
 
 SET(SOURCES
