Cover frame extractor

--- a/src/Helper/Tagging/CMakeLists.txt
+++ b/src/Helper/Tagging/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(SOURCES
         Frames/AbstractFrame.cpp
         Frames/Discnumber.cpp
         Frames/Popularimeter.cpp
+		Frames/Cover.cpp
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
