engine cmake update

--- a/src/Components/Engine/CMakeLists.txt
+++ b/src/Components/Engine/CMakeLists.txt
@@ -1,14 +1,22 @@
 PROJECT(say_comp_engine)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
 
-ADD_SUBDIRECTORY(Convert)
-ADD_SUBDIRECTORY(Playback)
-ADD_SUBDIRECTORY(Callbacks)
-
 SET(SOURCES
     AbstractEngine.cpp
     AbstractPipeline.cpp
     EngineHandler.cpp
+
+    Playback/PipelineProbes.cpp
+    Playback/PlaybackEngine.cpp
+    Playback/PlaybackPipeline.cpp
+    Playback/StreamRecorder.cpp
+    Playback/CrossFader.cpp
+
+	Convert/ConvertEngine.cpp
+	Convert/ConvertPipeline.cpp
+
+	Callbacks/EngineCallbacks.cpp
+	Callbacks/PipelineCallbacks.cpp
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
@@ -17,6 +25,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	${GSTREAMER_BASE_LIBRARIES}
 	${GSTREAMER_BASE_APP_LIBRARIES}
 	say_comp_playmanager
-	say_comp_engine_convert
-	say_comp_engine_playback
+
+    say_helper_tagging
+    say_helper_parser
 )
