--- a/src/Components/CoverLookup/CMakeLists.txt
+++ b/src/Components/CoverLookup/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(say_comp_covers)
 
 SET(SOURCES
-	CoverHelper.cpp
+    CoverHelper.cpp
     CoverLookup.cpp
     CoverLookupAlternative.cpp
     CoverLookupAll.cpp
@@ -13,6 +13,6 @@ SET(SOURCES
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-	say_helper
+	say_helper_tagging
 	say_db
 )
