--- a/src/GUI/TagEdit/CMakeLists.txt
+++ b/src/GUI/TagEdit/CMakeLists.txt
@@ -18,5 +18,6 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_comp_tagedit
 	say_gui_helper
+	say_gui_alternative_covers
 )
 
