introduces cover button

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
 PROJECT(say_gui)
 
-ADD_SUBDIRECTORY(AlternativeCovers)
+ADD_SUBDIRECTORY(Covers)
 ADD_SUBDIRECTORY(DirectoryWidget)
 ADD_SUBDIRECTORY(Helper)
 ADD_SUBDIRECTORY(InfoDialog)
