--- a/src/3rdParty/Soundcloud/CMakeLists.txt
+++ b/src/3rdParty/Soundcloud/CMakeLists.txt
@@ -46,7 +46,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_interfaces_library_container
 )
 
-cotire(${PROJECT_NAME})
+#cotire(${PROJECT_NAME})
 
 IF(NOT WIN32 OR NOT DEFINED WIN32)
 	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX}/sayonara)
