--- a/src/Components/Covers/CMakeLists.txt
+++ b/src/Components/Covers/CMakeLists.txt
@@ -15,4 +15,4 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_db
 )
-cotire(${PROJECT_NAME})
+#cotire(${PROJECT_NAME})
