--- a/src/3rdParty/SomaFM/CMakeLists.txt
+++ b/src/3rdParty/SomaFM/CMakeLists.txt
@@ -33,7 +33,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_comp_covers
 )
 
-cotire(${PROJECT_NAME})
+#cotire(${PROJECT_NAME})
 
 IF(NOT WIN32 OR NOT DEFINED WIN32)
     INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX}/sayonara)
