--- a/src/GUI/Playlist/CMakeLists.txt
+++ b/src/GUI/Playlist/CMakeLists.txt
@@ -42,5 +42,5 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     ${LINK_LIBS}
 )
-cotire(${PROJECT_NAME})
+#cotire(${PROJECT_NAME})
 
