--- a/src/GUI/Plugins/PlaylistChooser/CMakeLists.txt
+++ b/src/GUI/Plugins/PlaylistChooser/CMakeLists.txt
@@ -14,5 +14,5 @@ QT5_WRAP_UI(FORMS_UIC
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_comp_playlist_chooser
-    say_interfaces_player_plugin
+    say_gui_plugins
 )
