--- a/src/GUI/Plugins/Stream/CMakeLists.txt
+++ b/src/GUI/Plugins/Stream/CMakeLists.txt
@@ -15,5 +15,5 @@ QT5_WRAP_UI(FORMS_UIC
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     say_comp_streamplugins_streams
-    say_interfaces_player_plugin
+    say_gui_plugins
 )
