bookmarks in playlist menu

--- a/src/GUI/Playlist/CMakeLists.txt
+++ b/src/GUI/Playlist/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(SOURCES
     PlaylistMenu.cpp
     GUI_Playlist.cpp
     GUI_PlaylistTabs.cpp
+	BookmarksAction.cpp
 
     BottomBar/GUI_PlaylistBottomBar.cpp
     Delegate/PlaylistItemDelegate.cpp
@@ -29,6 +30,7 @@ SET(LINK_LIBS
     say_gui_info_dialog
     say_gui_shutdown_dialog
     say_gui_helper
+	say_comp_bookmarks
 )
 
 IF(NOT WIN32 OR NOT DEFINED WIN32)
