--- a/src/Components/Engine/CMakeLists.txt
+++ b/src/Components/Engine/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(SOURCES
     Playback/PlaybackPipeline.cpp
     Playback/StreamRecorder.cpp
     Playback/CrossFader.cpp
+    Playback/ChangeablePlaylist.cpp
 
     Convert/ConvertEngine.cpp
     Convert/ConvertPipeline.cpp
