debian control update

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends: cmake,
                debhelper (>= 9),
                libgstreamer-plugins-bad1.0-dev,
                libgstreamer-plugins-base1.0-dev,
+               gstreamer1.0-plugins-bad,
+               libgstreamer-plugins-bad1.0-0,
                libgstreamer1.0-dev,
                libmtp-dev,
                libtag1-dev,
