--- a/src/Languages/sayonara_lang.ts.template
+++ b/src/Languages/sayonara_lang.ts.template
@@ -117,7 +117,7 @@
 <context>
     <name>Application</name>
     <message>
-        <location filename="../Application/application.cpp" line="+234"/>
+        <location filename="../Application/application.cpp" line="+235"/>
         <source>Version </source>
         <translatorcomment>watch out for the space at the end</translatorcomment>
         <translation type="unfinished"></translation>
@@ -242,7 +242,7 @@
 <context>
     <name>GUI_AbstractLibrary</name>
     <message>
-        <location filename="../GUI/Library/GUI_AbstractLibrary.cpp" line="+515"/>
+        <location filename="../GUI/Library/GUI_AbstractLibrary.cpp" line="+517"/>
         <source>Library</source>
         <translation type="unfinished"></translation>
     </message>
@@ -691,7 +691,7 @@
 <context>
     <name>GUI_LanguageChooser</name>
     <message>
-        <location filename="../GUI/Preferences/Language/GUI_LanguageChooser.cpp" line="+154"/>
+        <location filename="../GUI/Preferences/Language/GUI_LanguageChooser.cpp" line="+158"/>
         <source>Language</source>
         <translation type="unfinished"></translation>
     </message>
@@ -1720,8 +1720,13 @@
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../GUI/Plugins/Stream/GUI_Podcasts.cpp" line="+45"/>
+        <location filename="../GUI/Plugins/Stream/GUI_Podcasts.cpp" line="+41"/>
         <source>Podcasts</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location line="+10"/>
+        <source>Podcast</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -2075,6 +2080,12 @@
         <source>Speed</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <location filename="../GUI/Plugins/Speed/GUI_Speed.cpp" line="+66"/>
+        <location line="+1"/>
+        <source>%1 not found</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>GUI_StartupDialog</name>
@@ -2163,8 +2174,13 @@
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../GUI/Plugins/Stream/GUI_Stream.cpp" line="+45"/>
+        <location filename="../GUI/Plugins/Stream/GUI_Stream.cpp" line="+40"/>
         <source>Webstreams</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location line="+10"/>
+        <source>Radio Station</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -2958,41 +2974,47 @@ Please choose another folder</source>
 <context>
     <name>LocalLibraryMenu</name>
     <message>
-        <location filename="../GUI/Library/Helper/LocalLibraryMenu.cpp" line="+35"/>
-        <location line="+42"/>
+        <location filename="../GUI/Library/Helper/LocalLibraryMenu.cpp" line="+31"/>
+        <location line="+48"/>
         <source>Reload library</source>
         <translatorcomment>I have the feeling we had that so often already...</translatorcomment>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-41"/>
-        <location line="+42"/>
+        <location line="-47"/>
+        <location line="+48"/>
         <source>Import files</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-41"/>
-        <location line="+42"/>
+        <location line="-47"/>
+        <location line="+48"/>
         <source>Import directory</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-41"/>
-        <location line="+42"/>
+        <location line="-47"/>
+        <location line="+48"/>
         <source>Info</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-41"/>
-        <location line="+42"/>
+        <location line="-47"/>
+        <location line="+48"/>
         <source>Library path</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-40"/>
-        <location line="+41"/>
+        <location line="-45"/>
+        <location line="+46"/>
         <source>Live search</source>
         <translatorcomment>the library shows the results of your search immediatly. Like google instant search</translatorcomment>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location line="-43"/>
+        <location line="+44"/>
+        <source>Auto update</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -3607,16 +3629,6 @@ OK?</source>
     <message>
         <location line="+1"/>
         <source>Copyright</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../GUI/Plugins/Stream/GUI_Podcasts.cpp" line="-15"/>
-        <source>Podcast</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../GUI/Plugins/Stream/GUI_Stream.cpp" line="-17"/>
-        <source>Radio Station</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
