--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,13 @@ ENDIF()
 
 SET(VAR_SAYONARA_VERSION "0.9.2")
 
-ADD_DEFINITIONS( -DSAYONARA_VERSION=\"${VAR_SAYONARA_VERSION}\" )
+SET(SAYONARA_VERSION "${VAR_SAYONARA_VERSION}")
+SET(SAYONARA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
+SET(SAYONARA_INSTALL_LIB_PATH "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/sayonara/")
+SET(SAYONARA_INSTALL_BIN_PATH "${CMAKE_INSTALL_PREFIX}/bin/")
+SET(SAYONARA_INSTALL_SHARE_PATH "${CMAKE_INSTALL_PREFIX}/share/sayonara/")
 
-ADD_DEFINITIONS( -DSAYONARA_INSTALL_PATH=\"${CMAKE_INSTALL_PREFIX}\" )
-ADD_DEFINITIONS( -DSAYONARA_INSTALL_LIB_PATH=\"${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/sayonara/\" )
-ADD_DEFINITIONS( -DSAYONARA_INSTALL_BIN_PATH=\"${CMAKE_INSTALL_PREFIX}/bin/\" )
-ADD_DEFINITIONS( -DSAYONARA_INSTALL_SHARE_PATH=\"${CMAKE_INSTALL_PREFIX}/share/sayonara/\" )
+CONFIGURE_FILE(Macros.h.in "${CMAKE_CURRENT_BINARY_DIR}/src/Helper/Macros.h" @ONLY)
 
 MESSAGE("Build Sayonara ${VAR_SAYONARA_VERSION}")
 MESSAGE("Will install to ${CMAKE_INSTALL_PREFIX}")
