--- a/src/3rdParty/SomaFM/CMakeLists.txt
+++ b/src/3rdParty/SomaFM/CMakeLists.txt
@@ -27,8 +27,9 @@ ELSE()
 ENDIF()
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-    say_gui_library
+    say_gui_helper
     say_comp_playlist
+    say_interfaces_library_container
 )
 
 IF( WITH_COTIRE )
