--- a/src/GUI/ShutdownDialog/CMakeLists.txt
+++ b/src/GUI/ShutdownDialog/CMakeLists.txt
@@ -10,3 +10,7 @@ QT5_WRAP_UI(FORMS_UIC
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}
+    say_gui_helper
+    say_helper_shutdown
+)
