--- a/src/Database/CMakeLists.txt
+++ b/src/Database/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(SOURCES
     AbstractDatabase.cpp
     DatabaseHandler.cpp
     LibraryDatabase.cpp
+    DatabaseSearchMode.cpp
     DatabaseBookmarks.cpp
     DatabaseConnector.cpp
     DatabaseModule.cpp
