--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.7)
 PROJECT("Sayonara Player")
 
-set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
 
 IF( WITH_COTIRE )
     INCLUDE(cotire)
@@ -26,6 +26,7 @@ MESSAGE("Will install to ${CMAKE_INSTALL_PREFIX}")
 
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(resources)
+ADD_SUBDIRECTORY(test)
 
 SET(CMAKE_SKIP_RPATH:BOOL ON)
 SET(CMAKE_INSTALL_MANIFEST "install_manifest.txt")
