--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -42,10 +42,14 @@ ELSE()
 ENDIF()
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
-ADD_LIBRARY(sayonara_test SHARED ${SOURCES})
-
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
     ${APPLICATION_LIBRARIES}
 )
+
+ADD_LIBRARY(sayonara_test SHARED ${SOURCES})
+TARGET_LINK_LIBRARIES(sayonara_test 
+	${APPLICATION_LIBRARIES}
+)
+
 
 
