--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(say_tests)
+INCLUDE(${CMAKE_SOURCE_DIR}/src/compiler.cmake)
 
 FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Sql Network DBus Network Xml Test REQUIRED)
 
 SET(CMAKE_AUTOMOC ON)
 SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
-
 
 INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
@@ -25,10 +25,7 @@ INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/test)
 
-ADD_EXECUTABLE(test1 test1.cpp)
-TARGET_LINK_LIBRARIES(test1 
-	sayonara_test
-	Qt5::Test	
-)
+INCLUDE("new_test.cmake")
+NEW_TEST(Helper/FileHelperTest.cpp)
+NEW_TEST(Helper/MetaDataListTest.cpp)
 
-ADD_TEST(NAME test1 COMMAND test1)
