--- a/src/Helper/CMakeLists.txt
+++ b/src/Helper/CMakeLists.txt
@@ -23,7 +23,10 @@ SET(SOURCES
     DirectoryReader/DirectoryReader.cpp
 
     Library/DateFilter.cpp
+    Library/Filter.cpp
     Library/SearchMode.cpp
+	Library/Sorting.cpp
+
     Logger/Logger.cpp
 
     Message/Message.cpp
