--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -15,11 +15,12 @@ SET(APPLICATION_LIBRARIES
     say_gui_library
     say_gui_directory_widget
 
-    say_gui_plugin_bookmarks
-    say_gui_plugin_broadcasting
-    say_gui_plugin_engine
-    say_gui_plugin_playlist_chooser
-    say_gui_plugin_stream
+	say_gui_plugins
+	#say_gui_plugin_bookmarks
+	#say_gui_plugin_broadcasting
+	#say_gui_plugin_engine
+	#say_gui_plugin_playlist_chooser
+	#say_gui_plugin_stream
 
     say_gui_player
     say_gui_preferences
