--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -7,7 +7,7 @@ ADD_SUBDIRECTORY(TagEdit)
 ADD_SUBDIRECTORY(Playlist)
 ADD_SUBDIRECTORY(Library)
 ADD_SUBDIRECTORY(Covers)
-ADD_SUBDIRECTORY(LyricLookup)
+ADD_SUBDIRECTORY(Lyrics)
 ADD_SUBDIRECTORY(RemoteControl)
 
 IF( NOT WIN32 OR NOT DEFINED WIN32 )
